Styling/MainStyle.css
/* ... */
    
#socialsSquareYoutube {
    margin-left: 33.7vw;
    margin-bottom: -11vw;
    width: 13vw;
    height: 10vw;
    background-color: var(--outlineColor);
}

#socialsSquareSpotify {
    margin-left: 52.5vw;
    margin-bottom: -13vw;
    width: 12vw;
    height: 12vw;
    background-color: var(--outlineColor);
}
/*SOCIALS END HERE*/



/* FOOTER STARTS HERE */
#footer {
    padding: 2vw;
    margin-top: 5vw;
    text-align: center;
    background-color: var(--backgroundColour);
    color: white;
    border-top: 0.35vw solid var(--outlineColor);
}

.footerText{
    font-size: 1.2vw;
}

#emailLink {
    color: white;
    text-decoration: none;
}

#adminLogin {
    cursor: pointer;
    margin-left: 44vw;
    margin-right: 44vw;
}
/* FOOTER ENDS HERE */



/* ADMIN-CONTAINER STARTS HERE */
#adminContainer {
    display: none;
    background-color: var(--backgroundColour);
    margin-top: 7vw;
    height: 35vw;
    width: 15vw;

    position: fixed;
    z-index: 1;

    border-top: 0.35vw solid var(--outlineColor);
    border-right: 0.35vw solid var(--outlineColor);
    border-bottom: 0.35vw solid var(--outlineColor);
    border-radius: 0.5vw;

    margin-left: -14vw;
    transition-duration: 0.5s;

    overflow: scroll;
    overflow-x: hidden;
    overflow-y: hidden;
}

#adminContainer:hover{
    margin-left: 0;
    transition-duration: 0.5s;

    overflow: scroll;
    overflow-x: hidden;
    overflow-y: visible;
}

#adminTitle {
    text-align: center;
    color: var(--outlineColor);
    font-size: 1.5vw;
    font-family: sans-serif;
}

#changeBackgroundImage {
    background-color: var(--backgroundColour);
    color: var(--outlineColor);
    font-size: 1vw;
    border: 0.2vw solid var(--outlineColor);
    padding: 0.5vw;
    border-radius: 0.5vw;
    margin-top: 1vw;
}

#changeBackgroundImage:hover {
    cursor: pointer;
    border-color: white;
    color: white;
    transition-duration: 0.25s;
}

#logOutButton {
    background-color: var(--backgroundColour);
    color: var(--outlineColor);
    font-size: 1vw;
    width: 8.1vw;
    border: 0.2vw solid var(--outlineColor);
    padding: 0.5vw;
    border-radius: 0.5vw;
    margin-top: 1vw;
}


#logOutButton:hover {
    cursor: pointer;
    border-color: white;
    color: white;
    transition-duration: 0.25s;
}

#changeText {
    background-color: var(--backgroundColour);
    color: var(--outlineColor);
    font-size: 1vw;
    width: 8.1vw;
    border: 0.2vw solid var(--outlineColor);
    padding: 0.5vw;
    border-radius: 0.5vw;
    margin-top: 1vw;
}


#changeText:hover {
    cursor: pointer;
    border-color: white;
    color: white;
    transition-duration: 0.25s;
}

#addAlbumCover {
    background-color: var(--backgroundColour);
    color: var(--outlineColor);
    font-size: 1vw;
    width: 8.1vw;
    border: 0.2vw solid var(--outlineColor);
    padding: 0.5vw;
    border-radius: 0.5vw;
    margin-top: 1vw;
}

#addAlbumCover:hover {
    cursor: pointer;
    border-color:white;
    color:white;
    transition-duration: 0.3s;

}

#changeYouTubeURL {
    background-color: var(--backgroundColour);
    color: var(--outlineColor);
    font-size: 1vw;
    width: 8.1vw;
    border: 0.2vw solid var(--outlineColor);
    padding: 0.5vw;
    border-radius: 0.5vw;
    margin-top: 1vw;
}

#changeYouTubeURL:hover {
    cursor: pointer;
    border-color:white;
    color:white;
    transition-duration: 0.3s;
}

#backgroundToolTip {
    background-color: var(--backgroundColour);
    width: 17vw;
    color: white;
    font-size: 1vw;
    border: 0.2vw solid white;
    padding: 0.5vw;
    border-radius: 0.5vw;
    margin-top: -2.5vw;
    margin-left: 11.5vw;
    margin-bottom: -0.04vw;
    position: fixed;

    display: none;
}

#toggleBannerText {
    background-color: var(--backgroundColour);
    color: var(--outlineColor);
    font-size: 1vw;
    width: 8.1vw;
    border: 0.2vw solid var(--outlineColor);
    padding: 0.5vw;
    border-radius: 0.5vw;
    margin-top: 1vw;
}

#toggleBannerText:hover {
    cursor: pointer;
    border-color:white;
    color:white;
    transition-duration: 0.3s;

}

#changeOutlineColour {
    background-color: var(--backgroundColour);
    color: var(--outlineColor);
    font-size: 1vw;
    width: 8.1vw;
    border: 0.2vw solid var(--outlineColor);
    padding: 0.5vw;
    border-radius: 0.5vw;
    margin-top: 1vw;
}

#changeOutlineColour:hover {
    cursor: pointer;
    border-color:white;
    color:white;
    transition-duration: 0.3s;
}

#changeBackgroundColour {
    background-color: var(--backgroundColour);
    color: var(--outlineColor);
    font-size: 1vw;
    width: 8.1vw;
    border: 0.2vw solid var(--outlineColor);
    padding: 0.5vw;
    border-radius: 0.5vw;
}

#changeBackgroundColour:hover {
    cursor: pointer;
    border-color:white;
    color:white;
    transition-duration: 0.3s;
}

#changeBackgroundImage:hover + #backgroundToolTip { display: block;}


#toolTipAdmin {
    color: white;
    font-family: sans-serif;
    font-size: 1vw;

}
/* ADMIN-CONTAINER ENDS HERE */



/* SCROLL ANIMATION STARTS HERE */
.scrollFade {
    opacity: 1;
    pointer-events: all;
}
.scrollFade--hidden {
    opacity: 0;
    pointer-events: none;
}
.scrollFade--visible {
    display: block;
    opacity: 1;
    pointer-events: all;
}
.scrollFade--animate {
    transition: opacity 0.5s ease-in-out;
}
/* SCROLL ANIMATION ENDS HERE */



/* POP UP LOGIN STARTS HERE */
#popUpLogin {
    color: white;
    background-color: var(--backgroundColour);
    border: 0.35vw solid var(--outlineColor);
    border-radius: 0.5vw;
    display: none;

    position: fixed;

    z-index: 1;
    width: 25vw;
    height: 15.5vw;

    font-size: 2vw;

    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

#loginEmailText {
    text-align: left;
    font-size: 1.5vw;
    padding-left: 1vw;
    padding-right: 2.1vw;
}

#loginEmail {
    height: 1.5vw;
    font-size: 1vw;
}
/* ... */

